image updates and general improvements

--- a/blog.html
+++ b/blog.html
@@ -2,6 +2,7 @@
 layout: page
 title: Blog
 permalink: /blog/
+featured-img: blog-lg
 ---
 
 <div class="blog-list" itemscope="" itemtype="http://schema.org/Blog">
